finish Ingredient list and create method with swagger
