# Components/Ingredient/Request/CreateIngredientRequest.go
@@ -1,0 +1,5 @@
+package Request
+
+type CreateIngredientRequest struct {
+	Name string `json:"name" validate:"required,min=3"`
+}
